@@ -327,7 +327,7 @@ tr_close( tr_handle * h )
 
 tr_torrent **
 tr_loadTorrents ( tr_handle   * h,
-                  const char  * destination,
+                  const char  * fallbackDestination,
                   int           isPaused,
                   int         * setmeCount )
 {
@@ -350,7 +350,7 @@ tr_loadTorrents ( tr_handle   * h,
                 tr_torrent * tor;
                 char path[MAX_PATH_LENGTH];
                 tr_buildPath( path, sizeof(path), torrentDir, d->d_name, NULL );
-                tor = tr_torrentInit( h, path, destination, isPaused, NULL );
+                tor = tr_torrentLoad( h, path, fallbackDestination, isPaused, NULL );
                 if( tor != NULL ) {
                     tr_list_append( &list, tor );
                     n++;
