@@ -11,6 +11,7 @@ NEWS file for Transmission <http://transmission.m0k.org/>
    + Add Dutch localization, re-add Russian localization, fix Korean localization
 - gtk:
    + Fix 0.90 packaging errors
+   + Fix 0.90 assertion failure: "destination != (void*)0"
 
 0.90 (2007/10/23)
  - Encryption support, with option to ignore unencrypted peers
